# LinuxCodeDemos

./: README.md
linux-demo/: Makefile动态链库静态库相关知识.doc  printf-function-line.txt
linux-demo/TerminalProgesssBar/: Makefile  test.c
linuxdemo/: FileOpt.c  FormatTime.c  Longjmp_try_catch.c  atexit.c  bin_tree.c  bind_cpu.c  btree.c  calloc.c  cat.c  endian.c  fifo_read.c  fifo_write.c  fork.c  get_args.c  get_opt.c  getline.c  gettime.c  holes.c  hostget.c  isalnum.c  isalpha.c  isascii.c  lock_file.c  longopt.c  macro_date_time.c  malloc.c  maxfds.c  menu.c  mmap.c  mysql.c  pipe.c  poll.c  popen.c  printenv.c  pthreadSetSpecific.c  rbtree.c  realloc.c  scandir.c  select.c  strdup.c  (+7 more)
linuxdemo/EventfdDemo/: EventfdDemo1.c  EventfdDemo2.c
linuxdemo/Exception/: Exception.cpp  Exception.h  Makefile  test.cpp
linuxdemo/NailPrinterServer/: MainServer.c  dragonboard.h  dragonboard_inc.h
linuxdemo/SerialPort/: linux_serialport.c  test
linuxdemo/ShellScript/: CaseDemo.sh  CheckProcess.sh  CmpDemo.sh  ForLoop.sh  IfDemo.sh  Menu1.sh  Menu2.sh  UntilLoop.sh  WhileLoop.sh  err_log_file  printf-script.sh
linuxdemo/SignalfdDemo/: signalfd.c
linuxdemo/TimerfdDemo/: timerfd.c
linuxdemo/backtrace/: backtrace.c
linuxdemo/cameratester/: DefineCmd.h  MainServer.c  Makefile  camera.c  camera.h  convert.c  convert.h  dragonboard.h  dragonboard_inc.h
linuxdemo/colorprintf/: main.c
linuxdemo/developboard_lcdbacklight/: Makefile  lcdbacklight-test.c  lcdbacklight.c
linuxdemo/linux-qvfb/qvfb-1.1/qvfb/: Makefile.am  Makefile.in  qvfbview.cpp
tlpi-book/: CHANGES
(+182 files in other folders)
